--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.mfb473.digitsequencerecognizer.MainActivity">
 
-    <org.opencv.android.JavaCameraView
+    <com.mfb473.digitsequencerecognizer.JavaCamResView
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:visibility="gone"
@@ -15,15 +15,34 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/main_surface"
-        app:show_fps="true"
+        app:show_fps="false"
         app:camera_id="any"/>
+
+    <View
+        android:id="@+id/upperBlock"
+        android:layout_width="match_parent"
+        android:layout_height="145dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:background="#99000000"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="145dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:background="#99000000"/>
 
     <Button
         android:id="@+id/button"
         android:layout_width="150dp"
         android:layout_height="75dp"
-        android:text="Detect"
-        android:visibility="gone"
+        android:text="Recognize"
+        android:textSize="24sp"
+        style="@style/Base.Widget.AppCompat.Button"
+        android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -31,14 +50,13 @@
 
     <TextView
         android:id="@+id/textView"
-        android:text="Result: 0"
-        android:textAppearance="@android:style/TextAppearance.Medium.Inverse"
-        android:background="@android:color/white"
+        android:textSize="32sp"
+        android:textColor="@android:color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@+id/button"
+        app:layout_constraintTop_toTopOf="@+id/upperBlock"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"/>
+        app:layout_constraintBottom_toBottomOf="@+id/upperBlock"/>
 
 </android.support.constraint.ConstraintLayout>
